--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,6 +5,7 @@ $primary: #1644ED;
 $secondary:#0A1136;
 $textprimary: #E1E9f0;
 $textsecondary: #FBFF35;
+$danger:#ff0000;
 
 
 
@@ -14,6 +15,7 @@ $theme-colors: (
     "secondary": $secondary,
     "textprimary": $textprimary,
     "textsecondary": $textsecondary,
+    "danger": $danger,
     
 
 );
